<?xml version="1.0"?>
<package format="2">
  <name>two_devices_communication</name>
  <version>0.0.0</version>
  <description>The two_devices_communication package</description>

  <maintainer email="mahfuz@todo.todo">mahfuz</maintainer>


  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>turtlesim</build_depend>

  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>turtlesim</build_export_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>turtlesim</exec_depend>


  <export>

  </export>
</package>
